--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/node": "^18.0.0",
     "solidity-coverage": "^0.8.0-beta.1",
     "truffle": "^5.5.18",
+    "ts-node": "^10.8.1",
     "typechain": "^8.1.0"
   }
 }
