--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "truffle:watch": "truffle watch",
     "truffle:compile": "truffle compile",
     "truffle:migrate": "truffle migrate",
     "truffle:test": "truffle test",
