--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "truffle-client",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "build:ts": "tsc -p .",
     "start": "react-scripts start",
@@ -35,19 +36,25 @@
     ]
   },
   "dependencies": {
+    "@bigheads/core": "^0.3.3",
     "@metamask/providers": "^9.0.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "@types/jsdom": "^16.2.14",
+    "jsdom": "^17.0.0",
+    "mersenne": "^0.0.4",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
-    "web3": "^1.7.3"
+    "web3": "^1.7.3",
+    "weighted": "^1.0.0"
   },
   "devDependencies": {
     "@openzeppelin/contracts": "^4.6.0",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.2.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^12.1.5",
+    "@testing-library/user-event": "^12.8.3",
     "@typechain/truffle-v5": "^8.0.1",
     "@types/chai": "^4.3.1",
+    "@types/jest": "^28.1.5",
     "@types/mocha": "^9.1.1",
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
@@ -55,6 +62,8 @@
     "solidity-coverage": "^0.8.0-beta.1",
     "truffle": "^5.5.18",
     "ts-node": "^10.8.1",
-    "typechain": "^8.1.0"
+    "typechain": "^8.1.0",
+    "typescript": "^4.7.4",
+    "yargs": "^17.5.1"
   }
 }
