--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,22 +2,22 @@
   "compilerOptions": {
     "lib": ["ES2018", "DOM"],
     "module": "esnext",
-    "target": "ES2018",
+    "target": "ES6",
     "jsx": "react-jsx",
     "strict": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "outDir": "dist",
-    "typeRoots": ["./types", "./src/types.ts"],
+    "rootDir": "src",
+    "typeRoots": ["./types", "./node_modules/@types"],
     "allowJs": true,
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
     "moduleResolution": "node",
-    "noEmit": true,
-    "isolatedModules": true
+    "noEmit": false
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "build", "cache", "artifacts", "dist"]
 }
