--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "build:ts": "tsc -p .",
+    "build:css": "npx tailwindcss -i ./src/tailwind.css -o ./public/tailwind.css --watch",
     "build:ts:watch": "npm run build:ts -- --watch",
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -37,12 +38,14 @@
   },
   "dependencies": {
     "@bigheads/core": "^0.3.3",
+    "@heroicons/react": "^2.0.12",
     "@metamask/providers": "^10.0.0",
     "@types/jsdom": "^20.0.0",
     "jsdom": "^20.0.0",
     "mersenne": "^0.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "^4.0.3",
     "web3": "^1.7.3",
     "weighted": "^1.0.0"
@@ -59,6 +62,7 @@
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "solidity-coverage": "^0.8.0-beta.1",
+    "tailwindcss": "^3.2.1",
     "truffle": "^5.5.18",
     "ts-node": "^10.8.1",
     "typechain": "^8.1.0",
