--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "truffle-client",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
+  "--type": "module",
   "scripts": {
     "build:ts": "tsc -p .",
     "build:css": "npx tailwindcss -i ./src/tailwind.css -o ./public/tailwind.css --watch",
@@ -61,6 +61,7 @@
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "solc": "^0.8.17",
     "solidity-coverage": "^0.8.0-beta.1",
     "tailwindcss": "^3.2.1",
     "truffle": "^5.5.18",
