--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,9 +2,10 @@
   "name": "bigheads-nft-client",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "build:ts": "tsc -p .",
-    "build:css": "npx tailwindcss -i ./src/tailwind.css -o ./public/tailwind.css --watch",
+    "build:css": "tailwindcss -i ./src/tailwind.css -o ./public/tailwind.css --watch",
     "build:ts:watch": "npm run build:ts -- --watch",
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -34,9 +35,8 @@
     "@bigheads/core": "^0.3.3",
     "@heroicons/react": "^2.0.12",
     "@metamask/providers": "^10.0.0",
-    "@types/jsdom": "^20.0.0",
-    "jsdom": "^20.0.0",
-    "mersenne": "^0.0.4",
+    "@types/jsdom": "^21.1.0",
+    "jsdom": "^21.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
