--- a/backend/package.json
+++ b/backend/package.json
@@ -22,5 +22,17 @@
     "typechain": "^8.1.0",
     "typescript": "^4.7.4",
     "yargs": "^17.5.1"
-  }
+  },
+  "description": "This box comes with everything you need to start using Truffle to write, compile, test, and deploy smart contracts, and interact with them from a React app.",
+  "main": "truffle-config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/brokenseal/bigheads-nft.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/brokenseal/bigheads-nft/issues"
+  },
+  "homepage": "https://github.com/brokenseal/bigheads-nft#readme"
 }
