--- a/bigheads/package.json
+++ b/bigheads/package.json
@@ -1,7 +1,6 @@
 {
   "name": "bigheads",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -22,5 +21,14 @@
     "react-dom": "^18.2.0",
     "ts-node": "^10.9.1",
     "weighted": "^1.0.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/brokenseal/bigheads-nft.git"
+  },
+  "bugs": {
+    "url": "https://github.com/brokenseal/bigheads-nft/issues"
+  },
+  "homepage": "https://github.com/brokenseal/bigheads-nft#readme",
+  "description": ""
 }
