--- a/frontend/package.json
+++ b/frontend/package.json
@@ -63,5 +63,17 @@
     "typechain": "^8.1.0",
     "typescript": "^4.7.4",
     "yargs": "^17.5.1"
-  }
+  },
+  "description": "This project is bootstraped with [Create React App](https://create-react-app.dev). It is unopinionated with only `web3.js` as an added dependency, so nothing stands in your way.",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/brokenseal/bigheads-nft.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/brokenseal/bigheads-nft/issues"
+  },
+  "homepage": "https://github.com/brokenseal/bigheads-nft#readme"
 }
