--- a/package.json
+++ b/package.json
@@ -1,5 +1,31 @@
 {
-  "devDependencies": {
-    "@types/jsdom": "^21.1.0"
-  }
+  "name": "bigheads-nft",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "directories": {
+    "test": "test"
+  },
+  "dependencies": {
+    "bigheads-nft-client": "^0.1.0"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/brokenseal/bigheads-nft.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/brokenseal/bigheads-nft/issues"
+  },
+  "homepage": "https://github.com/brokenseal/bigheads-nft#readme",
+  "workspaces": [
+    "frontend",
+    "backend",
+    "bigheads"
+  ]
 }
