--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -7,7 +7,8 @@
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "outDir": "dist",
-    "typeRoots": ["./types", "./src/types.ts"]
+    "noEmit": true,
+    "typeRoots": ["../frontend/src/types", "../node_modules/@types"]
   },
   "include": ["**/*.ts"],
   "exclude": ["node_modules", "build", "cache", "artifacts", "dist"]
