--- a/bigheads/package.json
+++ b/bigheads/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prepare": "ts-node --esm ./src/generate-bigheads.ts"
   },
   "author": "",
   "license": "ISC",
@@ -29,6 +29,5 @@
   "bugs": {
     "url": "https://github.com/brokenseal/bigheads-nft/issues"
   },
-  "homepage": "https://github.com/brokenseal/bigheads-nft#readme",
   "description": ""
 }
