--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "create-types": "typechain ./src/contracts/**/*.json --target=truffle-v5",
-    "clean": "rm -rf ./types/truffle-contracts build ./src/contracts ./src/bigheads/generated"
+    "clean": "rm -rf ./types/truffle-contracts build ./src/contracts ./src/bigheads/generated",
+    "prepare": "npm run create-types"
   },
   "eslintConfig": {
     "extends": [
@@ -64,7 +65,7 @@
     "typescript": "^4.7.4",
     "yargs": "^17.5.1"
   },
-  "description": "This project is bootstraped with [Create React App](https://create-react-app.dev). It is unopinionated with only `web3.js` as an added dependency, so nothing stands in your way.",
+  "description": "",
   "main": "index.js",
   "repository": {
     "type": "git",
@@ -74,6 +75,5 @@
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/brokenseal/bigheads-nft/issues"
-  },
-  "homepage": "https://github.com/brokenseal/bigheads-nft#readme"
+  }
 }
