--- a/frontend/package.json
+++ b/frontend/package.json
@@ -66,7 +66,8 @@
     "yargs": "^17.5.1"
   },
   "description": "",
-  "main": "index.js",
+  "main": "./src/index.ts",
+  "types": "./types/index.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/brokenseal/bigheads-nft.git"
