--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -7,7 +7,6 @@
     "strict": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
-    "outDir": "dist",
     "rootDir": "src",
     "typeRoots": ["./types", "../node_modules/@types"],
     "allowJs": true,
@@ -19,6 +18,6 @@
     "isolatedModules": true,
     "noEmit": true
   },
-  "include": ["src/**/*"],
+  "include": ["**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules", "build", "cache", "artifacts", "dist"]
 }
