--- a/bigheads/package.json
+++ b/bigheads/package.json
@@ -13,14 +13,18 @@
     "@types/node": "^18.13.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/yargs": "^17.0.22",
     "typescript": "^4.9.5"
   },
   "dependencies": {
     "@bigheads/core": "^0.3.3",
+    "dotenv": "^16.0.3",
+    "ipfs-http-client": "^60.0.0",
     "jsdom": "^21.1.0",
     "react-dom": "^18.2.0",
     "ts-node": "^10.9.1",
-    "weighted": "^1.0.0"
+    "weighted": "^1.0.0",
+    "yargs": "^17.6.2"
   },
   "repository": {
     "type": "git",
