--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bigheads-nft-client",
+  "name": "@bigheads-nft/frontend",
   "version": "0.1.0",
   "private": true,
   "type": "module",
