--- a/bigheads-management/package.json
+++ b/bigheads-management/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bigheads",
+  "name": "@bigheads-nft/bigheads-management",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
