--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bigheads-nft",
+  "name": "@bigheads/bigheads-nft",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,7 +10,7 @@
   "scripts": {
     "compile": "npm run compile -w backend",
     "create-types": "npm run create-types -w frontend",
-    "generate-and-upload": "npm run generate-and-upload -w bigheads",
+    "generate-and-upload": "npm run generate-and-upload -w bigheads-management",
     "deploy": "npm run migrate -w backend",
     "prepare": "npm-run-all compile create-types generate-and-upload deploy",
     "start": "npm run start -w frontend"
@@ -27,7 +27,7 @@
   "homepage": "https://github.com/brokenseal/bigheads-nft#readme",
   "workspaces": [
     "backend",
-    "bigheads",
+    "bigheads-management",
     "frontend"
   ]
 }
