--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,8 @@ dist
 build
 .DS_Store
 frontend/src/contracts
-frontend/types/truffle-contracts
 .vscode
 bigheads-management/src/generated
 frontend/public/bigheads/generated
 .env
+types
