--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -8,7 +8,11 @@
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "rootDir": "src",
-    "typeRoots": ["./types", "../node_modules/@types"],
+    "typeRoots": [
+      "./types",
+      "../node_modules/@types",
+      "../node_modules/@bigheads/backend"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
