--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bigheads/bigheads-nft",
+  "name": "@bigheads-nft/bigheads-nft",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
