--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@metamask/detect-provider": "^2.0.0",
     "bigheads-nft-client": "^0.1.0",
     "clsx": "^1.2.1",
     "npm-run-all": "^4.1.5"
