--- a/bigheads-management/package.json
+++ b/bigheads-management/package.json
@@ -6,9 +6,8 @@
   "scripts": {
     "generate": "ts-node --esm ./src/commands.ts generate",
     "save-to-file": "ts-node --esm ./src/commands.ts save-to-file",
-    "save-to-file-frontend": "ts-node --esm ./src/commands.ts save-to-file-frontend",
     "upload": "ts-node --esm ./src/commands.ts upload",
-    "generate-and-upload": "npm-run-all generate save-to-file save-to-file-frontend upload"
+    "generate-and-upload": "npm-run-all generate save-to-file upload"
   },
   "author": "",
   "license": "ISC",
