--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "compile": "npm run compile -w backend",
     "create-types": "npm run create-types -w backend",
     "generate-and-upload": "npm run generate-and-upload -w bigheads-management",
-    "deploy": "npm run migrate -w backend",
-    "prepare": "npm-run-all compile create-types generate-and-upload deploy",
+    "migrate": "npm run migrate -w backend",
+    "prepare": "npm-run-all compile create-types",
+    "deploy": "npm-run-all generate-and-upload migrate",
     "test:backend": "npm run test -w backend",
     "start": "npm run start -w frontend"
   },
