--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "main": "index.js",
   "dependencies": {
     "@metamask/detect-provider": "^2.0.0",
+    "@openzeppelin/contracts": "^4.8.2",
     "bigheads-nft-client": "^0.1.0",
     "clsx": "^1.2.1",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "tailwindcss": "^3.2.7",
+    "truffle": "^5.7.9"
   },
   "scripts": {
     "compile": "npm run compile -w backend",
@@ -16,7 +19,8 @@
     "migrate": "npm run migrate -w backend",
     "prepare": "npm-run-all compile create-types",
     "deploy": "npm-run-all generate-and-upload migrate",
-    "test:backend": "npm run test -w backend",
+    "test": "npm run test -w backend",
+    "ganache": "npm run test -w ganache",
     "start": "npm run start -w frontend"
   },
   "repository": {
